# rocq-rouche-capelli

./: .dockerignore  .gitignore  Dockerfile.ci  LLM-instructions.md  Makefile  Makefile.coq.conf  _CoqProject  rocq-rouche-capelli.opam  rocq-template.opam
.github/workflows/: rocq-docker-ci.yml
src/: .test.aux  rouche_capelli_v_jq.v  test.v
