opam-version: "2.0"
name: "rocq-rouche-capelli"
version: "0.1.0"
synopsis: "A proof for the Rouché–Capelli theorem by rocq-math-comp"
maintainer: "Chenghui Weng <144981080+weng-chenghui@users.noreply.github.com>"
depends: [
  "ocaml" {>= "4.14.0"}
  "rocq-core" {= "9.0.0"}
  "rocq-mathcomp-ssreflect" {= "2.4.0"}
  "rocq-mathcomp-algebra" {= "2.4.0"}
  "rocq-mathcomp-field" {= "2.4.0"}
  "rocq-mathcomp-fingroup" {= "2.4.0"}
  "rocq-mathcomp-finmap" {>= "2.1.0"}
  "rocq-mathcomp-solvable" {= "2.4.0"}
  "coq-mathcomp-classical" {= "1.13.0"}
]
build: [
  ["coq_makefile" "-f" "_CoqProject" "-o" "Makefile.coq"]
  ["%{make}%" "-f" "Makefile.coq" "-j%{jobs}%"]
]
install: [
  ["%{make}%" "-f" "Makefile.coq" "install"]
]
